<resources>
    <string name="app_name">ExamenDani</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grup">GRUP</string>
    <string name="nota">NOTA</string>
    <string name="insertBtn">+</string>
    <string name="grups">Grups</string>
    <string name="notes">Notes</string>
    <string name="nom">Nom</string>
    <string name="togroup">ToGroup</string>
</resources>