<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.InsertFragment">

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Name"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="80dp"
            android:inputType="text"
            tools:ignore="MissingConstraints"/>

        <EditText
            android:id="@+id/grupEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/grup"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="150dp"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/notaEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/nota"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="250dp"
            tools:ignore="MissingConstraints" />
         <Button
             android:id="@+id/btnInsert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/insertBtn"
             android:layout_marginLeft="140dp"
             android:layout_marginTop="300dp"
             tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/togroup"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="650dp" />
    </FrameLayout>
</layout>
