<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="8dp">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvNom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="26dp"
            tools:text="@string/nom"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvNota"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="334dp"
            tools:text="@string/notes"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvGrup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grups"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="28dp"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>